# BE/src/app.js
@@ -13,6 +13,7 @@ import userRoutes from './routes/user.routes.js';
 import propertyRoutes from './routes/property.routes.js';
 import uploadRoutes from './routes/upload.routes.js';
 import bookingRoutes from './routes/booking.routes.js';
+import contractRoutes from './routes/contract.routes.js';
 import errorHandler from './middleware/error-handler.middleware.js';
 
 connectDB();
@@ -42,6 +43,7 @@ app.use('/api/users', userRoutes);
 app.use('/api/properties', propertyRoutes);
 app.use('/api/upload', uploadRoutes);
 app.use('/api/bookings', bookingRoutes);
+app.use('/api/contracts', contractRoutes);
 
 app.use((_req, res) => res.status(404).json({ success: false, message: 'Route not found' }));
 app.use(errorHandler);
